--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@clerk/nextjs": "^6.31.6",
     "@next/font": "^14.2.15",
+    "@xyflow/react": "^12.10.0",
     "convex": "^1.26.2",
     "d3": "^7.9.0",
     "framer-motion": "^12.23.12",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.562.0",
     "next": "15.5.2",
     "react": "19.1.0",
