--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "framer-motion": "^12.23.12",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.562.0",
-    "next": "15.5.2",
+    "next": "^16.1.3",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
